--- a/VIEW/login/login.html
+++ b/VIEW/login/login.html
@@ -1,10 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!DOCTYPE html><!--deklarasi HTML 5-->
+
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>Login</title>
+	<title>Dunia || Coding</title>
+		<link rel="shortcut icon" href="images/n_icon.png">
+		<meta charset="utf-8">
+		<meta name="keyword" content="Belajar Web Programming">
+		<meta name="description" content="Web Programming adalah salah satu bahasa pemrograman yang digunakan untuk membua sebuah website mulai dari 								   forntEnd sampai backEnd">
+		<meta name="author" content="Nasution">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
+		
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
-	<h1>Halaman Login</h1>
+
+<body id="bodyKontak">
+	<div id="container">
+			
+			
+			
+			<div class="main">				
+				<form class="maintext">		
+						<h1 id="hone">We are </h1> 
+						<h1 id="htwo">aroma </h1>							
+						<h5 id="hthree">Welcome Back, Please login <br> to your account</h5>
+						
+						<div class="inp">
+							<input type="email" name="email" placeholder="Email" id="inp1">					
+							<input type="Password" name="Password" placeholder="Password"> <br><br><br><br><br>
+						</div>				
+						
+
+						 <input type="checkbox" name="checkbox" > <p id="rem">remember me</p>
+
+						 <a href="" id="forgot">forget password?</a>
+
+						<div class="tomboll">
+							<button id="tomm1">Login</button>
+						    <button id="tomm2">Sign Up</button>
+						</div>
+
+						
+					</form>		
+					
+			</div>
+		
+			<div class="mainn">
+				
+				<div id="topmenu">
+					<ul class="menu">
+						<li><a href="home.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="kontak.html">Contact</a></li>
+					</ul>
+
+					<div class="but">
+						<button id="but1">PREVIOUS</button>
+						<button id="but2">NEXT</button>
+					</div>
+				</div><br><br>
+					
+			</div><br>		
+		
+			
+	</div>
+
 </body>
 </html>
