--- a/VIEW/login/css/style.css
+++ b/VIEW/login/css/style.css
@@ -10,58 +10,53 @@ body{
 #container {
 	width: 900px;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 60px;
 }
 #topmenu {
 	text-align: center;
+
 }
 .menu {
 	list-style: none;
-	font-family:"Comic Sans MS";
+	font-family:"calibri";
 	font-weight: bold;
+
 }
 .menu li {
 	display: inline;
+
 }
 .menu li a {
 	display: inline-block;
 	padding: 10px 20px;
-	color: black;
+	color: white;
 	text-decoration: none;
 	text-transform: uppercase;
-	font-size: 15px;
-}
-.menu li a:hover {
-	border-bottom: solid 2px #7B68EE;
+	font-size: 10px;
 }
 
-#Medsos{
-	text-align: center;
-	margin-top: 0px;
-
-}
-.imedsos{
-	padding:0 40px 0 40px;
+.logo {
+	margin: 70px 0px 0px 20px;
 }
 .main {
 	background-color: white;
 	height: 500px;
-	width: 350px;
+	width: 390px;
 	float: left;
 	text-align: left;
 	font-family:"Calibri";
-	
+
 }
 .maintext{
 	padding:35px 0px 0px 30px;
 	margin: 80px 30px auto;
 }
 .mainn{
-	background-image: url("../img/gam.jpg");
+	background-image: url("../img/daun1.jpg");
 	background-repeat: no-repeat;
 	height: 500px;
 	width: 550px;
-	margin-left: 350px;
+	margin-left: 390px;
 	padding-right: 0px;
 	
 }
@@ -73,7 +68,7 @@ body{
 #htwo {
 	color :black;
 	float: right;
-	margin-right: 70px;
+	margin-right: 110px;
 }
 #hthree {
 	color: grey;
@@ -98,14 +93,9 @@ input{
 
 input:focus {
 	border-left: red solid 1px;
+	outline: none;
 }
 
-textarea{
-	padding:20px;
-	margin:10px;
-	background: transparent;
-	border: solid;
-}
 button{
 	color: white;
 	border: none;
@@ -118,24 +108,27 @@ button{
 }
 
 .but {
-	margin: 420px 0px 0 400px;
+	margin: 60px 0px 0 400px;
 }
 
 #but1 {
-	background-color: transparent;
-	border: white solid 1px;
-	color: white;
-}
-#but2 {
 	background-color: #5F7168;
 	border: #5F7168 solid 1px;
 	color: white;
+	font-size: 11px;
+}
+#but2 {
+	background-color: transparent;
+	border: #5F7168 solid 1px;
+	color: white;
 	float: left;
+	font-size: 11px;
 }
 
 #rem {
 	float: left;
 	color: black;
+	margin-left: 5px;
 } 
 #forgot {
 	text-decoration: none;
@@ -151,7 +144,7 @@ button{
 	color: white;
 	border: black solid 1px;
 	border-radius: 3px;
-	padding: 10px 30px;
+	padding: 10px 35px;
 	margin-right: 20px;
 }
 
