--- a/VIEW/login - Copy/login.html
+++ b/VIEW/login - Copy/login.html
@@ -19,24 +19,21 @@
 				<form class="maintext">		
 						<h1 id="hone">We are </h1> 
 						<h1 id="htwo">aroma </h1>							
-						<h5 id="hthree">Selamat datang, silahkan login <br> untuk melakukan donasi</h5><br><br>
+						<h5 id="hthree">Welcome Back, Please login <br> to your account</h5><br><br>
 						
 						<div class="input_box">
-							<input type="email" required="" class="inp1" id="masukan">
+							<input type="email" required="">
 							<label for="">Email</label><br>
 						</div>
 
 						<div class="input_box">
-							<input type="password" required="" id="masukan">
-							<label for="">Password</label>
-						</div>							
-						<br>
-						<div>
-							 <input type="checkbox" name="checkbox"><span  class="rem">Remember me</span>
-						 	<a href="" id="forgot">Forget password?</a>
-						</div>
+							<input type="password" required="">
+							<label for="">Password</label> <br><br><br><br><br><br>
+						</div>	
 						
-						<br><br>
+
+						 <input type="checkbox" name="checkbox" > <p id="rem">Remember me</p>
+						 <a href="" id="forgot">Forget password?</a>
 
 						<div class="tomboll">
 							<button id="tomm1">Login</button>
