[SYAM]ini rancangan terbaru pada home

--- a/VIEW/Home_v.syamil/home.css
+++ b/VIEW/Home_v.syamil/home.css
@@ -3,7 +3,9 @@
 *{
 	margin:0;
 	padding:0;
-	font-family: 'Open Sans', Arial, sans-serif;
+	/*font-family: 'Open Sans', Arial, sans-serif;*/
+	font:400 .9375rem Open Sans,sans-serif;
+	box-sizing: border-box;
 }
 .container{
 	width: 900px;
@@ -49,16 +51,16 @@
 	margin:130px auto;
 }
 .content-nav .title{
-	font-weight: 800;
+	font-weight: 600;
 	font-size: 24px;
-	color: #333;
+	color: #4d4d4d;
 }
 .content-nav .button{
-	margin-top: 30px;
+	margin-top: 40px;
 	padding: 10px 80px;
 	border: none;
 	outline: none;
-	border-radius: 2px;
+	border-radius: 3px;
 	font-size: 16px;
 	font-weight: 800px;
 	color: #fff;
@@ -227,4 +229,130 @@
 .snip1259.hover .date{
 	-webkit-transform:translateY(-100%);
 	transform: translateY(-100%);
+}
+.banner{
+	padding: 80px 0;
+	display: flex;
+}
+.text-left{
+	width: 46%;
+}
+.text-left h2{
+	width: 480px;
+	font-weight: 600;
+	font-size: 28px;
+	display: block;
+	color: #4d4d4d;
+}
+.text-left p{
+	font-size: 18px;
+	line-height: 1.5;
+}
+.text-left h2,
+.text-left p{
+	padding-bottom: 1em;
+}
+.btn-donasi{
+	font-size: 16px;
+	font-family: Open Sans,sans-serif;
+	border-radius: 3px;
+	display: inline-block;
+	padding: .5em 1.5em;
+	font-weight: 600;
+	margin-top: 2em;
+	line-height: normal;
+	text-align:center;
+	vertical-align: middle;
+	cursor: pointer;
+	background: #00aeef;
+	color: #fff;
+}
+.myslide{
+	display: none;
+}
+.myslide img{
+	vertical-align: middle;
+}
+.slider{
+	max-width: 54%;
+	position:relative;
+	margin:auto;
+}
+.prev, .next{
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	padding: 16px;
+	margin-top: -22px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+}
+
+.next{
+	right: 0;
+	border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover{
+	background-color: rgba(0,0,0,0.8);
+}
+
+.text{
+	color: #f2f2f2;
+	font-size: 15px;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 8px;
+	width: 100%;
+	text-align:center;
+}
+
+.dot{
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6 ease;
+}
+
+.active, .dot:hover{
+	background-color: #717171;
+}
+
+.fade{
+	-webkit-animation-name:fade;
+	-webkit-animation-duration:1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade{
+	from{
+		opacity: .4
+	}
+	to{
+		opacity: 1
+	}
+}
+
+@keyframes fade{
+	from{
+		opacity: 4
+	}
+	to{
+		opacity: 1
+	}
+}
+
+@media only screen and(max-width:300px){
+	.prev, .next, .text{
+		font-size: 11px;
+	}
 }
