--- a/VIEW/Home_v.syamil/home.html
+++ b/VIEW/Home_v.syamil/home.html
@@ -36,14 +36,61 @@
 					<button class="button btnright" type="button">Donasi Sekarang</button>
 					<button class="button btnleft" type="button">Konsultasi Donasi</button>
 			</div>
+			
+			<div class="banner">
+				<div class="text-left">
+					<h2>Investasikan Masa Tua Anda
+						<br>
+						Dengan Donasikan Sebagian Harta Anda
+					</h2>
+					<p>
+						Mari Berikan Donasi Terbaik Anda
+						<br>
+						Untuk Yang Membutuhkan
+					</p>
+					<a class="btn-donasi">Mulai Donasi</a>
+				</div>
+				<div class="slider">
+					<div class="myslide fade">
+						<div class="numbertext"> 1 / 3</div>
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample21.jpg" alt="pr-sample21" style="width: 100%">
+						<div class="text"> Orang Tua Al Fatih Berhasil Menggalang Dana</div>
+					</div>
+
+					<div class="myslide fade">
+						<div class="numbertext"> 2 / 3</div>
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample21.jpg" alt="pr-sample21" style="width: 100%">
+						<div class="text"> Orang Tua Al Fatih Berhasil Menggalang Dana</div>
+					</div>
+
+					<div class="myslide fade">
+						<div class="numbertext"> 3 / 3</div>
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample21.jpg" alt="pr-sample21" style="width: 100%">
+						<div class="text"> Orang Tua Al Fatih Berhasil Menggalang Dana</div>
+					</div>
+					
+					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+					<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+				</div>
+
+				<br>
+
+				<div style="text-align: center;">
+					<span class="dot" onclick="currentSlide(1)"></span>
+					<span class="dot" onclick="currentSlide(2)"></span>
+					<span class="dot" onclick="currentSlide(3)"></span>
+				</div>
+			</div>
 
 			<div class="content">
+				
 				<figure class="snip1259">
 					<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample21.jpg" alt="pr-sample21" />
 					<div class="date"><span class="day">28</span><span class="month">Apr</span></div>
 					<figcaption>
 						<h3>Mari Kita Bantu Al Fatih</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perferendis tempora, dignissimos, velit vitae eaque, tenetur, sit a dolorum beatae ad recusandae doloribus excepturi qui eveniet explicabo. Maxime, vitae, quasi?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perferendis tempora, dignissimos</p>
 					</figcaption>
 					<div class="hover"><i class="ion-android-open"></i></div>
 					<a href="#"></a>
@@ -53,7 +100,7 @@
 					<div class="date"><span class="day">02</span><span class="month">Jan</span></div>
 					<figcaption>
 						<h3>Mari Kita Bantu Pembangunan</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perferendis tempora, dignissimos, velit vitae eaque, tenetur, sit a dolorum beatae ad recusandae doloribus excepturi qui eveniet explicabo. Maxime, vitae, quasi?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perferendis tempora, dignissimos</p>
 					</figcaption>
 					<div class="hover"><i class="ion-android-open"></i></div>
 					<a href="#"></a>
@@ -63,7 +110,7 @@
 					<div class="date"><span class="day">29</span><span class="month">Jun</span></div>
 					<figcaption>
 						<h3>Bantuan Untuk Anak Bangsa</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perferendis tempora, dignissimos, velit vitae eaque, tenetur, sit a dolorum beatae ad recusandae doloribus excepturi qui eveniet explicabo. Maxime, vitae, quasi?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perferendis tempora, dignissimos</p>
 					</figcaption>
 					<div class="hover"><i class="ion-android-open"></i></div>
 					<a href="#"></a>
@@ -73,7 +120,7 @@
 					<div class="date"><span class="day">29</span><span class="month">Jun</span></div>
 					<figcaption>
 						<h3>Bantuan Untuk Anak Bangsa</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perferendis tempora, dignissimos, velit vitae eaque, tenetur, sit a dolorum beatae ad recusandae doloribus excepturi qui eveniet explicabo. Maxime, vitae, quasi?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perferendis tempora, dignissimos</p>
 					</figcaption>
 					<div class="hover"><i class="ion-android-open"></i></div>
 					<a href="#"></a>
